# ChangeLog for sys-kernel/kernel-eeepc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*kernel-eeepc-2.6.32.1 (16 Dec 2009)

  16 Dec 2009; Lance Albertson <ramereth@gentoo.org>
  +kernel-eeepc-2.6.32.1.ebuild:
  version bump

*kernel-eeepc-2.6.31.1 (02 Oct 2009)

  02 Oct 2009; Lance Albertson <ramereth@gentoo.org>
  -kernel-eeepc-2.6.30.ebuild, -kernel-eeepc-2.6.30.3.ebuild,
  -kernel-eeepc-2.6.30.5.ebuild, +kernel-eeepc-2.6.31.1.ebuild:
  Version bump

*kernel-eeepc-2.6.31 (11 Sep 2009)

  11 Sep 2009; Lance Albertson <ramereth@gentoo.org>
  +kernel-eeepc-2.6.31.ebuild:
  Version bump

*kernel-eeepc-2.6.29 (29 Mar 2009)

  29 Mar 2009; Lance Albertson <ramereth@gentoo.org>
  +kernel-eeepc-2.6.29.ebuild:
  Version bump, updated ebuild as well
