@@ -1,21 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST kernel-eeepc-2.6.31.1.x86.tbz2 5240071 RMD160 f112226026a33a281649cebb9c1c6470e5de52b0 SHA1 5bb9f4cb2f9c132b7472c7fc67d8bcdb0784b44f SHA256 67ff94f9c22964943ac5af4e40c04e592286dda52337ca1dae35ef432e799a63
-DIST kernel-eeepc-2.6.31.x86.tbz2 5239727 RMD160 7c13544216e04f1065046c00c7adfc8cd0ae8b3c SHA1 c87cad0d2952d94b7d27350bc365d848305a1227 SHA256 a5398cfcba46669c9fd15e12b0ba27097a106d90dcfc3ba14ef1819fe74948f5
 DIST kernel-eeepc-2.6.32.1.x86.tbz2 5455748 RMD160 038531310e086dc51f20f93b0614905841645615 SHA1 0613dc3ec13dd55ecc7e50b152e66590195a7dbf SHA256 8d021a2cadf4ea6dddbd8bdd61e5925dbc9ad6eea20280c03b12432241897c08
-DIST modules-eeepc-2.6.31.1.x86.tbz2 1667897 RMD160 341ed36f4f4d7557630bd7a7a917d8f587123506 SHA1 1619808e49fc756f2ed816a6cef70058784f3bbd SHA256 4c4f8635425e020e4bda99ce131a4c30f4ce0b4c1efd296e090a72a830746f1f
-DIST modules-eeepc-2.6.31.x86.tbz2 1679812 RMD160 18a652007ef2317b02f2e8f47cc1ab911e23fbb4 SHA1 f762816e3f81b218a777ce42dc2e815a7919f244 SHA256 0edb02e4eb70eb2bdc5144142ca26733fce9fcc571245ad9fad83ebb0e0ea6dc
+DIST kernel-eeepc-2.6.33.1.x86.tbz2 5842507 RMD160 2ebca68ff778264dd5830d2273fa2f0800ff4806 SHA1 8211091679a020230d9f57fe7b8052380604b5b4 SHA256 2fdc0908a1ff2d6fde1b17de55054bcb3d21285ed62404790c390e605503b885
 DIST modules-eeepc-2.6.32.1.x86.tbz2 1698878 RMD160 23a81816a6dd2c8f4c3988018dff2f1510d636a9 SHA1 95bbca944c98905703cb3d009958f3e5bdb52f77 SHA256 8c667a4187dc707cc81416f83d65a38817ddce83c665187f31fe582d75dd8f56
-EBUILD kernel-eeepc-2.6.31.1.ebuild 1220 RMD160 fb13671274964311f98b038d62bcab918b82d38d SHA1 e0cc49ce44bb744109cc4a7514593b34f9e9e546 SHA256 6c0e4043a37340634f551064d8c8f1ee4a36cdcdea983ba29a492c79d7dd6109
-EBUILD kernel-eeepc-2.6.31.ebuild 1220 RMD160 fb13671274964311f98b038d62bcab918b82d38d SHA1 e0cc49ce44bb744109cc4a7514593b34f9e9e546 SHA256 6c0e4043a37340634f551064d8c8f1ee4a36cdcdea983ba29a492c79d7dd6109
+DIST modules-eeepc-2.6.33.1.x86.tbz2 1675034 RMD160 6235abd69c74626e17e1235129e8871c98a1d0f1 SHA1 ef9744584dfac12636481849f384faaf942158e5 SHA256 5774055f4b7a968c793ac37350174943756c8f7aad529805c8181db80032a98f
 EBUILD kernel-eeepc-2.6.32.1.ebuild 1220 RMD160 fb13671274964311f98b038d62bcab918b82d38d SHA1 e0cc49ce44bb744109cc4a7514593b34f9e9e546 SHA256 6c0e4043a37340634f551064d8c8f1ee4a36cdcdea983ba29a492c79d7dd6109
-MISC ChangeLog 793 RMD160 260388a539941a8d8dd88bf741e6fc3078f8fb1b SHA1 9559525f5adec6fa1a83984bf1cd72e711f72c86 SHA256 8da7ba8161edeec2f5edf64ef25386ce058bffe88006bbd89d54547c4fa2a26a
+EBUILD kernel-eeepc-2.6.33.1.ebuild 1220 RMD160 680665fc11717b9c05e6ded0dee3914fbc4c9cd0 SHA1 88fa78a2133b0c4b1813d5a20322aa9206a595ae SHA256 f0dd7d193052e1472dbb1092b2e14f7de817a403fcc9d810c36dcbe937e7c250
+MISC ChangeLog 995 RMD160 f1347dd20ffb0859b36e90aaf893609808506667 SHA1 8361331a8f9f1ee9bf3f2c27af4e518662319af1 SHA256 2cd6da01d5f940bf166850b2139e6dd6e7e8f260df2ab938353d459fdda4584e
 MISC metadata.xml 301 RMD160 759f51dcb64d85eee294cf160d7eedff66f3c6f6 SHA1 36446536d5452b1771f375c9d6fbf867bb705587 SHA256 a1d5a7bd389d314377303e077893dcae8ed0c8bd5bf4389c384d751704c27b2d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iD8DBQFLKHvsQW+hXSf0t0IRAlM/AKDSbgr3T8MSCaMvonDSG7yWxw+YIACgsTA4
-YCk5psgu4BKHmO6o6PRlGOU=
-=HRmt
+iD8DBQFLnxH5QW+hXSf0t0IRAvdFAJ9H1Mqfd72EBA1aREMlv6ndQZAmSwCgo+pl
+CyE2UhNsDJzG8WWlwD7e9ig=
+=mXr6
 -----END PGP SIGNATURE-----
