@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/kernel-eeepc
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*kernel-eeepc-2.6.33.1 (16 Mar 2010)
+
+  16 Mar 2010; Lance Albertson <ramereth@gentoo.org>
+  -kernel-eeepc-2.6.31.ebuild, -kernel-eeepc-2.6.31.1.ebuild,
+  +kernel-eeepc-2.6.33.1.ebuild:
+  Version bump
 
 *kernel-eeepc-2.6.32.1 (16 Dec 2009)
 
